fixed header-footer spacing

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@ html, body{
 body{
     min-height: 100vh;
     position: relative;
-    text-align: center;
 }
 
 .footer {
@@ -17,12 +16,10 @@ body{
     justify-content: center;
     align-items: center;
     padding: 32px 0px;
-    gap: 16px;
 
     position: absolute;
     left: 0px;
     right: 0px;
-    /* top: 86.6vh; */
     bottom: 0%;
     min-height: 60px;
     max-height: 60px;
@@ -101,7 +98,8 @@ body{
     gap: 645px;
 
     width: 80%;
-    margin: 20px auto;
+    padding: 24px 0px;
+    margin: auto;
 
     height: 40px;
 }
